# Handwritten-digits-recognition

./: .gitignore  CMakeLists.txt
headers/: imgProc.h  mathFun.h  neural.h
src/: imgProc.c  main.c  mathFun.c  neural.c
